--- a/public/projects/contributions/index.html
+++ b/public/projects/contributions/index.html
@@ -135,7 +135,7 @@
     
   </div>
   <div class="resume-date">
-    <p>I'm a member of the planning committee for the Write the Docs Australia annual 2 day conference.<p>
+    <p>I'm a member of the planning team for the Write the Docs Australia annual 2 day conference.<p>
     <p class><a href="https://jenapp.github.io/projects/contributions/writethedocs/">Read more..</a></p>
   </div>
 </div>
