--- a/public/projects/creations/index.html
+++ b/public/projects/creations/index.html
@@ -165,7 +165,7 @@
     
   </div>
   <div class="resume-date">
-    <p>Created an English language user guide of the parent company’s Japanese dashboard platform (over 2000 pages)<p>
+    <p>Created an English language user guide of the parent company’s Japanese dashboard platform (over 2000 pages).<p>
     <p class><a href="https://jenapp.github.io/projects/creations/wingarc-mb/">Read more..</a></p>
   </div>
 </div>
@@ -195,7 +195,7 @@
     
   </div>
   <div class="resume-date">
-    <p>Created a documentation portal hosting all user docs for the Inomial Smile product<p>
+    <p>Created a documentation portal hosting all user docs for the Inomial Smile product.<p>
     <p class><a href="https://jenapp.github.io/projects/creations/inomial-docs/">Read more..</a></p>
   </div>
 </div>
