--- a/public/projects/contributions/writethedocs/index.html
+++ b/public/projects/contributions/writethedocs/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Jennifer Appleby | Portfolio | Write the Docs Australia</title>
-  <meta name="description" content="I&#39;m a member of the planning committee for the Write the Docs Australia annual 2 day conference.">
+  <meta name="description" content="I&#39;m a member of the planning team for the Write the Docs Australia annual 2 day conference.">
 
   
   
     <meta property="og:image" content="https://jenapp.github.io/img/J.jpg" />
     <meta property="og:title" content="Jennifer Appleby | Portfolio | Write the Docs Australia" />   
   
-  <meta property="og:description" content="I&#39;m a member of the planning committee for the Write the Docs Australia annual 2 day conference." />
+  <meta property="og:description" content="I&#39;m a member of the planning team for the Write the Docs Australia annual 2 day conference." />
   <meta name="author" content="Jennifer Appleby">
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
