--- a/public/projects/creations/inomial-docs/index.html
+++ b/public/projects/creations/inomial-docs/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Jennifer Appleby | Portfolio | Documentation portal &amp; user docs</title>
-  <meta name="description" content="Created a documentation portal hosting all user docs for the Inomial Smile product">
+  <meta name="description" content="Created a documentation portal hosting all user docs for the Inomial Smile product.">
 
   
   
     <meta property="og:image" content="https://jenapp.github.io/img/J.jpg" />
     <meta property="og:title" content="Jennifer Appleby | Portfolio | Documentation portal &amp; user docs" />   
   
-  <meta property="og:description" content="Created a documentation portal hosting all user docs for the Inomial Smile product" />
+  <meta property="og:description" content="Created a documentation portal hosting all user docs for the Inomial Smile product." />
   <meta name="author" content="Jennifer Appleby">
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
