--- a/public/projects/creations/inomial-docs/index.html
+++ b/public/projects/creations/inomial-docs/index.html
@@ -155,8 +155,11 @@
 <li>Downloadable CSV format templates</li>
 </ul>
 <h3 id="links">Links</h3>
+<ul>
+<li><a href="https://docs.inomial.com/">docs.inomial.com</a></li>
+</ul>
 
-    <p>Project link: <a href="https://docs.inomial.com/">https://docs.inomial.com/</a></p>
+    
     <ul class="tags">
     
       <li><a class="tag" href="/tags/oxygen-author">Oxygen Author</a></li>
