--- a/public/projects/creations/inomial-readthedocs/index.html
+++ b/public/projects/creations/inomial-readthedocs/index.html
@@ -135,8 +135,11 @@
 <p>Using <strong>Read the Docs</strong> as the hosting platform, content was written in <strong>reStructuredText</strong> and generated with <strong>Sphinx</strong>.</p>
 <p><img src="/img/proj-graphql-api-account.png" alt="Graph API docs"></p>
 <h3 id="links">Links</h3>
+<ul>
+<li><a href="https://inomial.readthedocs.io">Smile&rsquo;s GraphQL API docs</a></li>
+</ul>
 
-    <p>Project link: <a href="https://inomial.readthedocs.io">https://inomial.readthedocs.io</a></p>
+    
     <ul class="tags">
     
       <li><a class="tag" href="/tags/read-the-docs">Read the Docs</a></li>
