--- a/public/projects/creations/iress-commpay/index.html
+++ b/public/projects/creations/iress-commpay/index.html
@@ -153,7 +153,7 @@
 <li><a href="/docs/CommPay_Suspense_DraftMarked.pdf">Suspense content review draft - with edit mark up</a></li>
 <li><a href="/docs/CommPay_Suspense_ContentDesignBrief.pdf">Suspense content design brief</a></li>
 </ul>
-<p>Another example of an in-product help section update for another Iress product, Iress Pro:</p>
+<p>Another example of an in-product help section update for Iress Pro, a trading platform product:</p>
 <ul>
 <li><a href="/docs/Iress_ConnectToIress_Draft.pdf">Iress Pro: Connect to Iress</a></li>
 </ul>
