--- a/public/projects/creations/wingarc-mb/index.html
+++ b/public/projects/creations/wingarc-mb/index.html
@@ -146,8 +146,11 @@
 <li>A locally maintained doc set, containing relevant examples and screenshots</li>
 </ul>
 <h3 id="links">Links</h3>
+<ul>
+<li><a href="https://web.archive.org/web/20200420090920/https://docs.wingarc.com.au/motionboard">MotionBoard Documentation</a></li>
+</ul>
 
-    <p>Project link: <a href="https://web.archive.org/web/20200420090920/https://docs.wingarc.com.au/motionboard">https://web.archive.org/web/20200420090920/https://docs.wingarc.com.au/motionboard</a></p>
+    
     <ul class="tags">
     
       <li><a class="tag" href="/tags/confluence">Confluence</a></li>
