--- a/public/projects/contributions/writethedocs/index.html
+++ b/public/projects/contributions/writethedocs/index.html
@@ -149,7 +149,7 @@
 <h3 id="links">Links</h3>
 <ul>
 <li><a href="https://www.writethedocs.org/conf/australia/2024/">Write the Docs Australia 2024 conference</a></li>
-<li><a href="%22https://www.writethedocs.org/%22">Write the Docs</a></li>
+<li><a href="https://www.writethedocs.org/">Write the Docs</a></li>
 <li><a href="https://www.meetup.com/Write-the-Docs-Australia/">Write the Docs Australia meetups</a></li>
 </ul>
 
