--- a/public/projects/creations/iress-commpay/index.html
+++ b/public/projects/creations/iress-commpay/index.html
@@ -149,13 +149,13 @@
 </ul>
 <h3 id="links">Links</h3>
 <ul>
-<li><a href="/docs/CommPay_Suspense_Draft.pdf">Suspense content review draft</a></li>
-<li><a href="/docs/CommPay_Suspense_DraftMarked.pdf">Suspense content review draft - with edit mark up</a></li>
-<li><a href="/docs/CommPay_Suspense_ContentDesignBrief.pdf">Suspense content design brief</a></li>
+<li><a href="/docs/CommPay_Suspense_Draft.pdf">CommPay: Suspense draft</a></li>
 </ul>
+<!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
 <p>Another example of an in-product help section update for Iress Pro, a trading platform product:</p>
 <ul>
-<li><a href="/docs/Iress_ConnectToIress_Draft.pdf">Iress Pro: Connect to Iress</a></li>
+<li><a href="/docs/Iress_ConnectToIress_Draft.pdf">Iress Pro: Connect to Iress draft</a></li>
 </ul>
 
     
