Add Pro screenshot

--- a/public/projects/creations/iress-commpay/index.html
+++ b/public/projects/creations/iress-commpay/index.html
@@ -157,6 +157,7 @@
 <ul>
 <li><a href="/docs/Iress_ConnectToIress_Draft.pdf">Iress Pro: Connect to Iress draft</a></li>
 </ul>
+<p><img src="/img/proj-iress-pro.png" alt="Iress Pro Help"></p>
 
     
     <ul class="tags">
