--- a/public/index.html
+++ b/public/index.html
@@ -653,6 +653,17 @@ Deliver delight in your UI?</p>
     
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">Technical Writer</h3>
+            <div class="subheading mb-3">Tecala Group</div>
+            <p>Created internal technical reference documents and client user guides for a new manged services client.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sep 2024 - Jan 2025</span>
+          </div>
+        </div>
+    
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">Senior Technical Content Designer</h3>
             <div class="subheading mb-3">Iress</div>
             <p>Technical Writer role expanded to included UI content, error messages and user journeys.</p>
