--- a/public/index.html
+++ b/public/index.html
@@ -655,7 +655,7 @@ Deliver delight in your UI?</p>
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Technical Writer</h3>
             <div class="subheading mb-3">Tecala Group</div>
-            <p>Created internal technical reference documents and client user guides for a new manged services client.</p>
+            <p>Created internal technical reference documents for support engineers and end-user software guides for a newly onboarded managed IT services client.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Sep 2024 - Jan 2025</span>
